--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -65,3 +65,17 @@
     font-weight: 700;
   }
 }
+
+@media (max-width: 768px) {
+  .greedy-nav .visible-links {
+    display: none !important;
+  }
+  
+  .greedy-nav__toggle {
+    display: block !important;
+  }
+  
+  .greedy-nav .hidden-links {
+    display: block;
+  }
+}
