--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -13,5 +13,15 @@
 <link rel="manifest" href="{{ base_path }}/images/manifest.json"/>
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
-
+<style>
+@media (max-width: 768px) {
+  .greedy-nav .visible-links {
+    display: none !important;
+  }
+  
+  .greedy-nav__toggle {
+    display: block !important;
+  }
+}
+</style>
 <!-- end custom head snippets -->
