--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -20,7 +20,8 @@ layout: single
   background: rgba(255, 255, 255, 0.03);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 15px;
-  padding: 20px;
+  padding: 15px;
+  width: 250px;
 }
 
 .other-projects-sidebar h2 {
