--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,6 +3,17 @@ layout: single
 ---
 
 <style>
+/* Hide published date */
+.page__meta,
+.page__date {
+  display: none !important;
+}
+
+/* Fix overlap with left sidebar */
+.page__inner-wrap {
+  margin-left: 0 !important;
+  padding-left: 20px !important;
+}
 /* Fix overlap with left sidebar */
 .page__inner-wrap {
   margin-left: 0 !important;
